egonlang-core/res/examples/invalid/infix_type_mismatch_unit.eg
1 % ();
() % 1;

// out: TypeError: mismatched types: expected type `number` but received `()`
// out: TypeError: mismatched types: expected type `number` but received `()`
